syntax = "proto3";

package queries;

message PBQuery {
  uint32 from_node_id = 1;
  uint32 to_node_id = 2;
  uint32 departure_time = 3;
}

message PBQueries {
  repeated PBQuery queries = 1;
}
